src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_flann_matcher jyppx_ocv_features2d_flann_matcher;
typedef struct jyppx_ocv_features2d_ann_index jyppx_ocv_features2d_ann_index;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_match_train_count(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_match_train_fill(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, jyppx_ocv_dmatch* matches, int match_capacity, int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_knn_match_count(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, const jyppx_ocv_mat* train_descriptors, int k, int compact_result, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_knn_match_fill(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, const jyppx_ocv_mat* train_descriptors, int k, int compact_result, int* offsets, int offset_capacity, jyppx_ocv_dmatch* matches, int match_capacity, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_knn_match_train_count(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, int k, int compact_result, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_knn_match_train_fill(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, int k, int compact_result, int* offsets, int offset_capacity, jyppx_ocv_dmatch* matches, int match_capacity, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_radius_match_count(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, const jyppx_ocv_mat* train_descriptors, float max_distance, int compact_result, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_radius_match_fill(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, const jyppx_ocv_mat* train_descriptors, float max_distance, int compact_result, int* offsets, int offset_capacity, jyppx_ocv_dmatch* matches, int match_capacity, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_radius_match_train_count(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, float max_distance, int compact_result, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_radius_match_train_fill(const jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* query_descriptors, float max_distance, int compact_result, int* offsets, int offset_capacity, jyppx_ocv_dmatch* matches, int match_capacity, int* group_count, int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_create(
    int dimension,
    int distance,
    jyppx_ocv_features2d_ann_index** index);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_ann_index_release(
    jyppx_ocv_features2d_ann_index* index);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_add_items(
    jyppx_ocv_features2d_ann_index* index,
    const jyppx_ocv_mat* features);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_build(
    jyppx_ocv_features2d_ann_index* index,
    int trees);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_knn_search(
    const jyppx_ocv_features2d_ann_index* index,
    const jyppx_ocv_mat* query,
    jyppx_ocv_mat* indices,
    jyppx_ocv_mat* distances,
    int knn,
    int search_k);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_save(
    jyppx_ocv_features2d_ann_index* index,
    const unsigned char* filename_utf8,
    int filename_byte_length,
    int prefault);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_load(
    jyppx_ocv_features2d_ann_index* index,
    const unsigned char* filename_utf8,
    int filename_byte_length,
    int prefault);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_get_tree_number(
    const jyppx_ocv_features2d_ann_index* index,
    int* tree_number);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_get_item_number(
    const jyppx_ocv_features2d_ann_index* index,
    int* item_number);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_set_on_disk_build(
    jyppx_ocv_features2d_ann_index* index,
    const unsigned char* filename_utf8,
    int filename_byte_length,
    int* enabled);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_ann_index_set_seed(
    jyppx_ocv_features2d_ann_index* index,
    int seed);